prepare project for overtaking

--- a/docker/Dockerfile.windows.amd64
+++ b/docker/Dockerfile.windows.amd64
@@ -1,8 +1,8 @@
 FROM microsoft/nanoserver:10.0.14393.1884
 
-LABEL maintainer="Bo-Yi Wu <appleboy.tw@gmail.com>" \
+LABEL maintainer="Convention-X-Treme <dev@convention-x-treme.de>" \
   org.label-schema.name="Drone Discord" \
-  org.label-schema.vendor="Bo-Yi Wu" \
+  org.label-schema.vendor="Convention-X-Treme" \
   org.label-schema.schema-version="1.0"
 
 COPY release/drone-discord.exe C:/bin/drone-discord.exe
