--- a/docker/Dockerfile.linux.amd64
+++ b/docker/Dockerfile.linux.amd64
@@ -1,8 +1,8 @@
 FROM plugins/base:linux-amd64
 
-LABEL maintainer="Bo-Yi Wu <appleboy.tw@gmail.com>" \
+LABEL maintainer="Convention-X-Treme <dev@convention-x-treme.de>" \
   org.label-schema.name="Drone Discord" \
-  org.label-schema.vendor="Bo-Yi Wu" \
+  org.label-schema.vendor="Convention-X-Treme" \
   org.label-schema.schema-version="1.0"
 
 COPY release/linux/amd64/drone-discord /bin/
