--- a/.drone.yml
+++ b/.drone.yml
@@ -25,6 +25,11 @@ steps:
     depends_on:
       - install-modules
     image: registry.convention-x-treme.de/baseimages/golang:latest
+    environment:
+      WEBHOOK_ID:
+        from_secret: 'DISCORD_WEBHOOK_ID'
+      WEBHOOK_TOKEN:
+        from_secret: 'DISCORD_WEBHOOK_TOKEN'
     commands:
       - go test -short -coverprofile coverage.out $(go list ./... | grep -v /vendor/)
 
@@ -46,6 +51,9 @@ steps:
         from_secret: SONAR_TOKEN
       SONAR_HOST_URL:
         from_secret: SONAR_HOST
+    commands:
+      - ci/set-version.sh
+      - sonar-scanner
 
   - name: build
     depends_on:
